Fix bug with PHP logo not showing up on home page hero section

--- a/src/sass/home/_hero-actions.sass
+++ b/src/sass/home/_hero-actions.sass
@@ -1,7 +1,7 @@
-.home .hero-actions
+.home .hero__actions
     gap: 13px
 
-    .hero-btn
+    .hero__btn
         background-color: $main-color
         border-color: $main-color-hover
         color: white !important
@@ -31,14 +31,14 @@
                 transform: translateY(3px)
 
         &:hover
-            opacity: 0.9
+            opacity: 0.8
             border-color: $main-color-hover
 
 @media(max-width: 900px)
-    .home .hero-actions
+    .home .hero__actions
         justify-content: center
 
 @media(max-width: 540px)
-    .home .hero-actions
-        .hero-btn
+    .home .hero__actions
+        .hero__btn
             margin: 0 auto
