--- a/src/sass/home/_hero.sass
+++ b/src/sass/home/_hero.sass
@@ -4,12 +4,12 @@
         margin: 60px 0 30px 0
         transition: opacity .5s ease-in-out
 
-        .hero-logo
-            max-width: 300px
+        &__logo
+            max-width: 250px
             height: auto
             filter: $shadow-on-dark
 
-        .hero-text
+        &__text
             font-size: 1.3rem
             text-align: left
             line-height: 1.6
@@ -32,6 +32,6 @@
             .php-revival-hero-row
                 flex-direction: column
 
-            .hero-logo
+            &__logo
                 margin-right: auto
                 margin-left: auto
