--- a/src/sass/modules/_variables.sass
+++ b/src/sass/modules/_variables.sass
@@ -3,7 +3,7 @@ $main-color-lighter: #2e6d9f
 $main-color-light: #7899B5
 $main-color-light-hover: #6c8aa4
 $main-color-hover: #284a68
-$bg-element-color: #1d2a37
+$bg-element-color: #213f5a
 $background: #15202b
 $classic-color: #7a86b8
 $classic-color-hover: #5c6ca9
